smoother UX for VL dropdown

--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -275,6 +275,10 @@
   }
 }
 
+.react-autoql-sample-queries-filter-dropdown {
+  min-width: 180px;
+}
+
 @keyframes slideDown {
   0% {
     transform: translateY(-100%);
