close VL popover on DM close

--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -281,6 +281,10 @@
 
 .react-autoql-sample-queries-filter-dropdown {
   min-width: 180px;
+
+  .popover-container-content {
+    padding: 0;
+  }
 }
 
 @keyframes slideDown {
