fix select component html rendering and popover

--- a/src/components/Notifications/NotificationItem/NotificationItem.scss
+++ b/src/components/Notifications/NotificationItem/NotificationItem.scss
@@ -409,7 +409,7 @@
 }
 
 .react-autoql-notification-options-popover .popover-container-content {
-  padding: 0;
+  padding: 0 !important;
 }
 
 // Set delay per List Item
