fix filter lock popover zindex issue

--- a/src/components/Popover/Popover.scss
+++ b/src/components/Popover/Popover.scss
@@ -18,6 +18,7 @@
     background-color: transparent;
     padding: 0 !important;
     overflow: hidden;
+    z-index: 999999999;
 
     .popover-arrow-container {
       border-radius: 4px;
