--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -59,7 +59,7 @@
     transition: opacity 0.3s ease, color 0.3s ease;
     top: 10px;
     margin-bottom: -10px;
-    z-index: 999999999;
+    z-index: 99999;
     height: 0;
     overflow: visible;
     margin: 0;
