fix: tables fetch second page immediately on mount

--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -66,6 +66,7 @@
     padding: 0;
     border: none;
     min-width: 100%;
+    flex: 0 0 0;
 
     .chat-message-toolbar-left {
       margin-left: -5px;
