--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -90,5 +90,5 @@
 .react-autoql-select-popup-container {
   background: var(--react-autoql-background-color-secondary);
   max-height: 300px;
-  overflow-y: auto;
+  overflow: hidden;
 }
