--- a/src/components/Cascader/Cascader.scss
+++ b/src/components/Cascader/Cascader.scss
@@ -9,36 +9,29 @@
     transition: max-width 0.3s ease;
     display: inline-block;
     vertical-align: top;
-    padding: 0 10px;
     margin: 10px 0;
     width: 100%;
-    max-width: calc(100% - 20px);
     white-space: pre-wrap;
 
     &.hidden {
-      max-width: 0;
+      max-width: 100px;
 
       span {
         white-space: nowrap;
       }
 
-      .option {
-        opacity: 0;
-        pointer-events: none;
-      }
+      // .option {
+      //   opacity: 0;
+      //   pointer-events: none;
+      // }
     }
 
     .options-title {
       padding: 4px;
-      padding-left: 10px;
+      padding-left: 15px;
       font-weight: 600;
-    }
 
-    .cascader-back-arrow {
-      position: absolute;
       cursor: pointer;
-      top: 15px;
-      left: 0;
       &:hover {
         opacity: 0.8;
       }
@@ -46,10 +39,10 @@
 
     .option {
       cursor: pointer;
-      padding: 4px;
+      padding: 4px 15px;
       display: flex;
       justify-content: space-between;
-      border-radius: 2px;
+      align-items: center;
       padding-left: 10px;
       transition: color 0.1s ease, background-color 0.2s ease;
 
@@ -63,13 +56,15 @@
         vertical-align: middle;
       }
 
-      &:hover,
-      &.active {
-        background-color: var(--react-autoql-accent-color, #26a7df);
-        color: var(--react-autoql-text-color-accent);
+      &:not(.react-autoql-cascader-option-disable-hover) {
+        &:hover,
+        &.active {
+          background-color: var(--react-autoql-accent-color, #26a7df);
+          color: var(--react-autoql-text-color-accent);
 
-        .option-execute-icon {
-          opacity: 1;
+          .option-execute-icon {
+            opacity: 1;
+          }
         }
       }
     }
