--- a/src/components/Cascader/Cascader.scss
+++ b/src/components/Cascader/Cascader.scss
@@ -3,7 +3,6 @@
   white-space: nowrap;
   overflow: hidden;
   min-width: 300px;
-  // overflow-x: auto;
 
   .options-container {
     transition: max-width 0.3s ease;
@@ -12,6 +11,8 @@
     margin: 10px 0;
     width: 100%;
     white-space: pre-wrap;
+    overflow: auto;
+    max-height: 100%;
 
     &.hidden {
       max-width: 100px;
