--- a/src/components/DataExplorer/SampleQueryList.scss
+++ b/src/components/DataExplorer/SampleQueryList.scss
@@ -7,9 +7,9 @@
     position: relative;
     flex-direction: row;
     font-size: 14px;
-    padding: 5px;
+    padding: 3px 8px;
     letter-spacing: 0.02em;
-    border-top: 1px solid var(--react-autoql-background-color-disabled);
+    border-top: 1px solid #8b8b8b1f;
 
     .react-auoql-inline-number-editor-wrapper,
     .autcomplete-input-popover-btn {
