--- a/src/components/Cascader/Cascader.scss
+++ b/src/components/Cascader/Cascader.scss
@@ -41,8 +41,7 @@
     }
 
     .options-title {
-      padding: 4px;
-      padding-left: 15px;
+      padding: 5px 15px;
       font-weight: 600;
       flex: 0 0 auto;
 
@@ -54,7 +53,7 @@
 
     .option {
       position: relative;
-      padding: 6px;
+      padding: 6px 10px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -63,11 +62,11 @@
 
       .react-autoql-cascader-option-item {
         z-index: 1;
-        padding: 0 12px;
+        padding: 0 8px;
       }
 
       .react-autoql-cascader-option-arrow {
-        opacity: 0.7;
+        opacity: 0;
       }
 
       .option-execute-icon {
@@ -96,6 +95,8 @@
       }
 
       &:not(.react-autoql-cascader-option-custom-content) {
+        letter-spacing: 0.03em;
+
         &.react-autoql-cascader-option-active {
           background-color: var(--react-autoql-accent-color, #26a7df);
           color: var(--react-autoql-text-color-accent);
@@ -105,10 +106,15 @@
             opacity: 1;
           }
         }
+        &:hover {
+          .react-autoql-cascader-option-arrow {
+            opacity: 1;
+          }
 
-        &:hover::before {
-          opacity: 0.3;
-          z-index: 0;
+          &::before {
+            opacity: 0.2;
+            z-index: 0;
+          }
         }
       }
     }
