--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -16,6 +16,8 @@
     max-height: 200px;
     border: 1px solid var(--react-autoql-border-color);
     border-radius: 4px;
+    margin: 5px;
+    margin-top: 0;
 
     .data-explorer-data-preview {
       height: 100% !important;
@@ -26,13 +28,13 @@
     }
   }
 
+  .react-autoql-selectable-table {
+    padding-top: 0;
+  }
+
   .data-explorer-section.topic-dropdown-section {
     flex: 1.3;
-    margin-top: 10px;
-
-    .react-autoql-input-label {
-      padding-left: 3px;
-    }
+    margin-top: 8px;
 
     .react-autoql-select-and-label .react-autoql-select {
       line-height: 32px;
@@ -118,9 +120,16 @@
       overflow: hidden;
       min-height: 0;
 
+      .react-autoql-input-label {
+        display: inline;
+        padding-left: 8px;
+      }
+
       .data-preview-section {
         flex: 1.2;
+        margin-top: 8px;
       }
+
       .query-suggestions {
         flex: 2;
         margin-top: 20px;
