use plain text editor for duckling time

--- a/src/components/DataExplorer/SampleQueryList.scss
+++ b/src/components/DataExplorer/SampleQueryList.scss
@@ -135,7 +135,7 @@
 .react-auoql-inline-number-editor-wrapper {
   .react-autoql-input-and-label-container {
     padding: 0;
-    .react-autoql-input-container .react-autoql-input[type='number'] {
+    .react-autoql-input-container .react-autoql-input {
       border-radius: 0;
       height: 35px;
     }
