--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -250,6 +250,17 @@
     }
   }
 
+  .data-explorer-section-placeholder-loading-container {
+    min-height: 90px;
+    width: 100%;
+    height: 100%;
+    padding-top: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+
   .data-explorer-section-placeholder {
     min-height: 90px;
     width: 100%;
