--- a/src/components/DataExplorer/SampleQueryList.scss
+++ b/src/components/DataExplorer/SampleQueryList.scss
@@ -6,10 +6,11 @@
     display: flex;
     position: relative;
     flex-direction: row;
+    align-items: center;
     font-size: 14px;
-    padding: 3px 8px;
     letter-spacing: 0.02em;
     border-top: 1px solid #8b8b8b1f;
+    min-height: 50px;
 
     .data-explorer-sample-chunk {
       white-space: nowrap;
@@ -21,7 +22,23 @@
       margin-left: 3px;
     }
 
+    &::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-color: var(--react-autoql-accent-color);
+      transition: opacity 0.2s;
+
+      opacity: 0;
+    }
+
     &:hover {
+      &::before {
+        content: '';
+        opacity: 0.05;
+      }
+
       .query-suggestion-send-btn {
         opacity: 0.7;
       }
@@ -32,6 +49,7 @@
       flex-direction: row;
       align-items: center;
       white-space: pre-wrap;
+      padding: 8px;
     }
 
     .query-suggestion-send-btn {
@@ -42,7 +60,7 @@
       display: flex;
       font-size: 19px;
       margin: 7px;
-      margin-left: 20px;
+      margin-left: 10px;
       width: 30px;
       height: 30px;
       z-index: 1;
