fix jerky cascader animation

--- a/src/components/Cascader/Cascader.scss
+++ b/src/components/Cascader/Cascader.scss
@@ -58,6 +58,7 @@
       justify-content: space-between;
       align-items: center;
       transition: color 0.1s ease, background-color 0.1s ease;
+      height: 34px;
       cursor: pointer;
 
       .react-autoql-cascader-option-item {
