improve loading skeleton style matching

--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -254,11 +254,15 @@
     min-height: 90px;
     width: 100%;
     height: 100%;
-    padding-top: 10px;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
+
+    .data-explorer-section-placeholder-loading-item {
+      padding: 12px 0;
+      width: 100%;
+    }
   }
 
   .data-explorer-section-placeholder {
