--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -66,7 +66,8 @@
     padding: 0;
     border: none;
     min-width: 100%;
-    flex: 0 0 0;
+    flex: 0 0 0px;
+    flex-basis: 0px;
 
     .chat-message-toolbar-left {
       margin-left: -5px;
