--- a/src/components/CustomScrollbars/CustomScrollbars.scss
+++ b/src/components/CustomScrollbars/CustomScrollbars.scss
@@ -1,4 +1,4 @@
-.react-autoql-custom-scrollbars.scrollbar-container {
+.react-autoql-custom-scrollbars {
   &.always-visible {
     .ps__rail-y,
     .ps__rail-x {
@@ -8,12 +8,6 @@
         opacity: 0.5 !important;
       }
     }
-  }
-
-  // Possible bug in PerfectScrollbars putting scrollbar on the left side
-  .ps__rail-y {
-    right: 0px !important;
-    left: unset !important;
   }
 
   .ps__rail-y,
@@ -30,6 +24,7 @@
     .ps__thumb-x {
       background-color: var(--react-autoql-highlight-color);
       opacity: 0.5;
+      cursor: default;
     }
   }
 }
