--- a/src/components/Notifications/RuleSimple/RuleSimple.scss
+++ b/src/components/Notifications/RuleSimple/RuleSimple.scss
@@ -7,7 +7,20 @@
   &.with-query-validation .react-autoql-rule-condition-select-input-container {
     margin-bottom: 30px;
   }
+  .react-autoql-rule-first-field-selection-grid-container {
+	height: 130px ;
+	margin-top: 10px;
+	margin-bottom: 25px;
+	padding-left:20px;
 
+	.react-autoql-input-label {
+        display: inline;
+        padding-left: 5px;
+      }
+	.react-autoql-selectable-table{
+		padding: 0px 5px 5px 5px;
+	}
+  }
   .react-autoql-notification-rule-container {
     display: flex;
     align-items: flex-end;
@@ -50,6 +63,7 @@
       flex: 1;
       margin-bottom: 28px;
     }
+
 
     .react-autoql-rule-condition-select-input-container {
       display: flex;
