add error handling for more cases in data explorer

--- a/src/components/DataExplorer/DataPreview.scss
+++ b/src/components/DataExplorer/DataPreview.scss
@@ -11,6 +11,8 @@
     margin-top: 20px;
     margin-bottom: 10px;
     padding: 0 25px;
+    font-style: italic;
+    opacity: 0.7;
   }
 
   .data-explorer-data-preview {
