--- a/src/components/Cascader/Cascader.scss
+++ b/src/components/Cascader/Cascader.scss
@@ -102,6 +102,7 @@
         padding: 0;
         height: 100%;
         width: 100%;
+        cursor: default;
       }
 
       &:not(.react-autoql-cascader-option-custom-content) {
