--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -47,7 +47,6 @@
   .data-explorer-section.topic-dropdown-section {
     flex: 0 0 auto;
     max-height: 35%;
-    margin-top: 8px;
 
     .react-autoql-select-and-label .react-autoql-select {
       line-height: 32px;
@@ -140,7 +139,6 @@
 
       .data-preview-section {
         flex: 1.2;
-        margin-bottom: 20px;
       }
 
       .query-suggestions {
@@ -213,6 +211,7 @@
       flex-wrap: nowrap;
       height: 100%;
       min-height: 0;
+      overflow: auto;
     }
   }
 
@@ -252,7 +251,8 @@
     align-items: center;
     font-size: 16px;
     font-weight: 600;
-    margin: 5px 0;
+    margin-bottom: 5px;
+    margin-top: 15px;
     min-height: 30px;
 
     .react-autoql-data-explorer-title-text-sample-queries {
@@ -277,6 +277,20 @@
       padding: 12px 0;
       width: 100%;
     }
+  }
+
+  .data-explorer-section-error-container {
+    min-height: 90px;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    padding: 40px;
+    font-style: italic;
+    opacity: 0.7;
   }
 
   .data-explorer-section-placeholder {
