Add files back for old data explorer

--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -68,9 +68,10 @@
     overflow: hidden;
     border-radius: 4px;
 
-    &.data-explorer {
-      background: var(--react-autoql-background-color-secondary);
-    }
+    // TODO: add back for Data Explorer V2
+    // &.data-explorer {
+    //   background: var(--react-autoql-background-color-secondary);
+    // }
   }
   .react-autoql-mobile-drawer-content-container {
     width: 100%;
@@ -630,9 +631,10 @@
   position: relative;
   z-index: 2;
 
-  &.react-autoql-data-explorer {
-    background-color: var(--react-autoql-background-color-secondary);
-  }
+  // TODO: add back for Data Explorer V2
+  // &.react-autoql-data-explorer {
+  //   background-color: var(--react-autoql-background-color-secondary);
+  // }
 
   .react-autoql-icon.data-search svg {
     stroke: var(--react-autoql-background-color-primary);
