--- a/src/components/SelectableList/SelectableList.scss
+++ b/src/components/SelectableList/SelectableList.scss
@@ -1,4 +1,4 @@
-.react-autoql-list-item {
+too.react-autoql-list-item {
   padding: 0 20px;
   display: flex;
   justify-content: space-between;
@@ -26,7 +26,6 @@
 }
 
 .col-visibility-header {
-  // padding: 0 20px;
   padding-left: 20px;
   display: flex;
   justify-content: space-between;
