add block style to fix the issue

--- a/src/components/Notifications/RuleSimple/RuleSimple.scss
+++ b/src/components/Notifications/RuleSimple/RuleSimple.scss
@@ -182,4 +182,7 @@
   .data-alert-condition-statement-query2 {
     font-style: italic;
   }
+  .data-alert-condition-statement-query2 {
+    display: block;
+  }
 }
