add filters and groupbys to data preview to determine disabled columns

--- a/src/components/DataExplorer/DataPreview.scss
+++ b/src/components/DataExplorer/DataPreview.scss
@@ -28,5 +28,19 @@
       justify-content: center;
       align-items: center;
     }
+
+    th.selectable-table-column-disabled {
+      .react-autoql-checkbox-container {
+        display: none;
+      }
+
+      &::after {
+        background-color: unset !important;
+      }
+    }
+
+    td.selectable-table-cell-disabled {
+      opacity: 1 !important;
+    }
   }
 }
