--- a/src/components/Icon/Icon.scss
+++ b/src/components/Icon/Icon.scss
@@ -10,6 +10,9 @@
   height: 1em;
   width: 1em;
 
+  &.react-autoql-icon-success {
+    color: var(--react-autoql-success-color) !important;
+  }
   &.react-autoql-icon-warning {
     color: var(--react-autoql-warning-color) !important;
   }
