--- a/src/components/SelectableTable/SelectableTable.scss
+++ b/src/components/SelectableTable/SelectableTable.scss
@@ -104,18 +104,13 @@
           border-bottom: 1px solid var(--react-autoql-table-border-color);
 
           &.selectable-table-column-disabled {
+            .selectable-table-col-header {
+              cursor: default;
+              opacity: 0.8;
+            }
+
             &::before {
               background-color: var(--react-autoql-border-color) !important;
-            }
-            &::after {
-              content: '\00a0';
-              position: absolute;
-              height: 100%;
-              width: 100%;
-              left: 0px;
-              top: 0px;
-              opacity: 0.4;
-              background-color: var(--react-autoql-border-color);
             }
           }
 
@@ -241,21 +236,19 @@
     background: var(--bg-color);
   }
 
-  p {
-    margin-bottom: 0;
-  }
-
   .selectable-table-tooltip-section {
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
-
-    &:not(:last-child) {
-      margin-bottom: 5px;
-    }
+    font-size: 0.9em;
   }
 
   .selectable-table-tooltip-title {
     font-weight: 600;
+    margin-bottom: 3px;
+  }
+
+  .react-autoql-icon {
+    margin-right: 3px;
   }
 }
