increase size of data preview in cascader

--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -45,8 +45,8 @@
   }
 
   .data-explorer-section.topic-dropdown-section {
-    flex: 0 0 auto;
-    max-height: 35%;
+    // flex: 0 0 auto;
+    // max-height: 35%;
 
     .react-autoql-select-and-label .react-autoql-select {
       line-height: 32px;
@@ -139,6 +139,10 @@
 
       .data-preview-section {
         flex: 1.2;
+
+        &.topic-dropdown-section {
+          flex: 1.6 1;
+        }
       }
 
       .query-suggestions {
