--- a/src/components/Notifications/NotificationItem/NotificationItem.scss
+++ b/src/components/Notifications/NotificationItem/NotificationItem.scss
@@ -96,10 +96,11 @@
     overflow: hidden;
     padding: 10px 20px;
     font-weight: 500;
+    flex: 0 0 auto;
 
     .data-alert-condition-statement-operator {
       text-decoration: underline;
-	  color: var(--react-autoql-accent-color);
+      color: var(--react-autoql-accent-color);
     }
 
     .data-alerts-container,
@@ -167,9 +168,18 @@
         visibility: visible;
         position: relative;
         opacity: 1;
+        overflow: hidden;
+        display: flex;
 
         .react-autoql-response-content-container {
-          max-height: 300px !important;
+          // max-height: 300px !important;
+          flex: 1;
+          height: unset;
+          max-height: 100%;
+
+          .react-autoql-table-container .react-autoql-table.tabulator {
+            padding-bottom: 5px;
+          }
         }
       }
     }
